--- a/src/editor.scss
+++ b/src/editor.scss
@@ -45,3 +45,12 @@ span.cwp_todo_edit {
     padding: 1px 10px;
     margin-left: 10px;
 }
+
+.cwp_todo_list .components-base-control {
+    width: 10%;
+    margin-left: 10px;
+}
+
+.strike-line {
+   text-decoration: line-through;
+}
